* 20181101 --dump and --dump-as-body now take optional arguments which can
           limit what is printed, making targeted debugging easier.
* 20181101 --dump now prints all output to the default output filehandle
           instead of STDOUT.
* 20181101 Using --header now handles replacing a multi-line header properly
* 20181103 Prevent --dump from always listing XCLIENT as active
* 20181103 -lp/--local-port was documented but -lp/-lport was implemented.
           Now all three are documented and implemented.
* 20181103 Properly document that --drop-after-send takes an argument.
* 20181103 Rework --dump to produce more consistent and thorough output
             - ensure no leading/trailing space when only dumping sections
             - alphabetize lists for reproducible output
* 20181104 Fix bugs causing the interactions between --dump,
           --auth-hide-password, --dump-as-body, and
           --dump-as-body-shows-password to not always work as documented
* 20181104 More --dump improvements and bug fixes
             - General layout improvements
             - Auth: add output for --auth-hide-password
             - Transport: only show the output options relevant to the type
             - TLS: Fix bug preventing display of TLS info when
               --tls-on-connect used
             - Proxy: Add output for --proxy-command and --proxy-protocol
             - Transport: add output for --copy-routing
             - Transport: add output for -4 and -6
             - Output: add output for --protect-prompt and --show-raw-text
             - Protocol: add output for --force-getpwuid
             - XCLIENT: add output for --xclient-before-starttls and
               --xclient-no-verify
* 20181104 --dump-mail should write to the default output filehandle
* 20181104 Add --output as a synonym for --output-file
* 20181104 Clean up contact/notifications - remove Google+ everywhere, add
           RSS and Twitter to base.pod
* 20181104 Spelling fixes